--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -31,7 +31,7 @@ next: SA1_149.html
   </tr>
   <tr>
     <td title='t99.2.8a29'>佛告比丘：「諦聽，善思，當為汝說。比丘！有色、因色、繫著色，自觀察未生憂悲惱苦而生，已生而復增長廣大；受、想、行、識亦復如是。比丘！頗有色常、恒、不變易、正住耶？」</td>
-    <td id='p4'>4. The Buddha told the monks, “Listen closely, and consider it well. I will explain it for you. Monks, those things have form, cause form, and they’re tied to form when someone examines for themselves the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth [of grief, sorrow, pain, and trouble] that have already arisen. <em>Feeling, conception, volition, and awareness are likewise.</em> Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”</td>
+    <td id='p4'>4. The Buddha told the monks, “Listen closely, and consider it well. I will explain it for you. Monks, those things have form, cause form, and they’re tied to form when someone examines for themselves the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth [of grief, sorrow, pain, and trouble] that have already arisen. <em>Feeling, conception, volition, and awareness are likewise.</em> Monks, could it be that form is permanent, eternal, unchanging, and remains the same?”</td>
   </tr>
   <tr>
     <td title='t99.2.8b4'>答言：「不也，世尊！」</td>
@@ -74,7 +74,7 @@ next: SA1_149.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This is <em>sūtra</em> no. 35 in the <cite>Taisho</cite> edition and no. 147 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008a05" target="_blank">T99.2.8a5-20</a>). It’s parallel with <a href="https://suttacentral.net/sn22.43" target="_blank">SN 22.43</a>. Note that the analysis of form differs from that of the Pali, and there’s no mention of sixteen monks. [<a href="#ref1">back</a>]</li>
+<li id="n1">This is <em>sūtra</em> no. 36 in the <cite>Taisho</cite> edition and no. 148 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008a21" target="_blank">T99.2.8a21-b14</a>). It’s parallel with <a href="https://suttacentral.net/sn22.43" target="_blank">SN 22.43</a>. Note that the analysis of form differs from that of the Pali, and there’s no mention of sixteen monks. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā</em>. C. 摩偷羅國、跋提河側、傘蓋菴羅樹園. SN 22.43 is placed at Sāvatthī. Aside from Mathurā, a well-known city in western India, these place names are obscure and lack good attestation in other Buddhist sources that I can find. Below is an analysis of each location name in this introduction:<br/>
 <em>Mathurā</em>. C. 摩偷羅國 (EMC. mua-t‘əu-la + “country” = Pr. <em>mathura</em> or <em>madhura</em>), P. <em>madhurā</em>, S. <em>mathurā</em>.<br/>
 <em>on the bank of the Bhadrika River</em>. C. 跋提河側 (EMC. buat-dei + “river bank”). 跋提 was sometimes used to translit. the name of one of the five original disciples, Bhadrika. It could also translit. <em>vati</em>. The river that would have been near Mathurā was the Yamunā. Perhaps this was another name for it, or a minor river in the area. I can find no attestation of this river in other sources.<br/>
