--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -7,47 +7,56 @@ previous: SA1_149.html
 next: SA1_151.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 150 (38). Lowly
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（三八） 卑下</th>
+  <th class='en'>150 (38). Lowly</th>
+  <tr>
+    <td title='t99.2.8c8'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.8c9'>爾時，世尊告諸比丘：「世人為卑下業，種種求財活命，而得巨富，世人皆知。如世人之所知，我亦如是說。所以者何？莫令我異於世人。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Worldly people of lowly occupations search in various ways for wealth and livelihood, and they obtain their fortunes. Worldly people all know this. According to how something is known to worldly people, I also thus speak. Why is that? It doesn’t set me apart from worldly people.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.8c12'>「諸比丘，譬如一器，有一處人，名為揵茨。 有名鉢，有名匕匕羅，有名遮留，有名毘悉多，有名婆闍那，有名薩牢。 如彼所知，我亦如是說。 所以者何？ 莫令我異於世人故。</td>
+    <td id='p3'>3. “Monks, take for example a vessel in a person’s dwelling that’s called a <em>ghaṭī</em>. Some call it a <em>pātra</em>, some call it a <em>pipīla</em>, some call it a <em>jvāla</em>, some call it a <em>vistha</em>, some call it a <em>vacana</em>, and some call it a <em>śarāva</em>.<sup id="ref2"><a href="#n2">2</a></sup> However they know it, I also thus speak. Why is that? It’s so I’m not set apart from worldly people.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.8c16'>「如是，比丘，有世間法，我自知自覺，為人分別演說顯示，知見而說，世間盲無目者不知不見；世間盲無目者不知不見，我其如之何！</td>
+    <td id='p4'>4. “Thus, monks, there’s a mundane way of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Knowing and seeing it, I say: ‘The world is blind, without eyes, and doesn’t know or see it.’ How am I like the world that’s blind, without eyes, and doesn’t know or see it?</td>
+  </tr>
+  <tr>
+    <td title='t99.2.8c19'>「比丘，云何世間世間法，我自知自覺，乃至不知不見？色無常、苦、變易法，是為世間世間法；受、想、行、識，無常、苦、變易法，是世間世間法。比丘，是名世間世間法，我自知自見，乃至盲無目者不知不見，其如之何！」</td>
+    <td id='p5'>5. “Monks, what is the mundane way of the world that I know and realize … doesn’t know or see it? Form is impermanent, painful, and liable to change. This is the mundane way of the world. Feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane way of the world. Monks, this is called the mundane way of the world that I know and see … How am I like those who are blind, without eyes, and don’t know or see it?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.8c24'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Worldly people of lowly occupations search in various ways for wealth and livelihood, and they obtain their fortunes. Worldly people all know this. According to how something is known to worldly people, I also thus speak. Why is that? It doesn’t set me apart from worldly people.
-{:#p2}
+<hr/>
 
-3\. “Monks, take for example a vessel in a person’s dwelling that’s called a ghaṭī. Some call it a pātra, some call it a pipīla, some call it a jvāla, some call it a vistha, some call it a vacana, and some call it a śarāva.[\[2\]](#n2){:#ref2} However they know it, I also thus speak. Why is that? It’s so I’m not set apart from worldly people.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. Thus, monks, there’s a mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Knowing and seeing it, I say: ‘The world is blind, without eyes, and doesn’t know or see it.’ How am I like the world that’s blind, without eyes, and doesn’t know or see it?
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 38 in the <cite>Taisho</cite> edition and no. 150 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c08" target="_blank">T99.2.8c8-25</a>). It’s parallel with a passage in <a href="https://suttacentral.net/mn139" target="_blank">MN 139</a> on local dialects, <a href="SA1_149.html" target="_blank">SĀ 1.149</a>, and <a href="https://suttacentral.net/sn22.94" target="_blank">SN 22.94</a>. [<a href="#ref1">back</a>]</li>
+<li id="n2">Some of these Indic names are obscure transliterations in Chinese. I’ve consulted suggestions in a Buddhist Chinese glossary (T2130 翻梵語), which reads the transliterations as S., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.<br/>
+<em>ghaṭī.</em> C. 揵茨 (EMC. gɪɛn-dzii = G. <em>ghaḍi</em> or <em>gaḍ̱i</em>), P. <em>ghaṭī</em>, S. <em>ghaṭī</em>. This seems a Pr. form for the name of a large water jar.<br/>
+<em>pātra</em>. Ch. 鉢 (EMC. puat = G. <em>pat[ra]</em>), P. <em>patta</em>, S. <em>pātra</em>. This term became the C. translation of the Buddhist alms bowl.<br/>
+<em>pipīla</em>. Ch. 匕匕羅 (EMC. pii-pii-la = Pr. <em>pipila</em>?). S. <em>pipīla</em>? This is the S. name of an ant. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1032c16" target="_blank">T2130.54.1032c16</a>) claims the translit. means a flying insect. It may have been a word derived from an equivalent of P. <em>pivati</em> that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. <em>pisīla</em> instead, which differs from the C. translit. only in the middle consonant. I lean towards the translit. being a corruption of <em>pisīla</em> or an equiv. word.<br/>
+<em>jvāla</em>. Ch. 遮留 (EMC. tʃɪă-lɪəu = Pr. <em>chalu</em> or <em>charu</em>?). The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a12" target="_blank">T2130.54.987a12</a>) says that the translit. means “light” (光). S. <em>jvāla</em> seems closest to this meaning for the translit.; however, <em>rucā</a> is another possibility if the characters were transposed. Neither option seems appropriate for the name of a vessel. I’ve adopted the S. reading indicated by the C. glossary for lack of a better option.<br/>
+<em>vistha</em>. Ch. 毘悉多 (EMC. bii-siĕt-ta = G. <em>*vista</em>?), P. <em>vittha</em>, S. <em>vista</em> or <em>vistha</em>. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a13" target="_blank">T2130.54.987a13</a>) claims that this is the same as a more well-known translit. (婆私吒) for S. <em>vasiṣṭha</em> and translates it as “highest” (最勝). However, the passage in MN 139 has P. <em>vitta</em>, which means possessions or property in general. On the other hand, P. <em>vittha</em> means a drinking bowl, and this appears to be most likely thing for this passage. I’ve adopted the S. equivalent for this last possibility.<br/>
+<em>vacana</em>. Ch. 婆闍那 (EMC. bua-ʒɪă(to)-na = G. <em>vacana</em> or <em>vatona</em>?), S. <em>vacana</em>. The glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a14" target="_blank">T2130.54.987a14</a>) offers an alternative translit. (婆遮那) and translates the term as “speech” (語). There is an alt. pronunciation of 闍 as <em>to</em>. I haven’t discovered a good Indic equivalent for either translit. that was name of a vessel. So, again, I have simply adopted the S. equiv. of the glossary’s suggestion.<br/>
+<em>śarāva</em>. Ch. 薩牢 (EMC. sat-lau = <em>sara</em> or <em>saro</em>?), P. <em>sarāva</em>, S. <em>śarāva</em>. In MN 139, one of the items in the list is <em>sarāva</em>, meaning a “plate, cup, saucer” depending on the source. I’ve adopted its S. equivalent. [<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Monks, what is the mundane rule of the world that I know and realize … doesn’t know or see it? Form is impermanent, painful, and liable to change. This is the mundane rule of the world. Feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is called the mundane rule of the world that I know and see … How am I like those who are blind, without eyes, and don’t know or see it?”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 8 April 2024</p>
 
-6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p6}
-
----
-
-### Notes
-
-1. {:#n1} This sūtra is parallel with a passage in [MN 139](https://suttacentral.net/mn139){:target="_blank"} on local dialects, [SĀ 1.149](SA1_149.html){:target="_blank"} and [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} These Indic names are all obscure transliterations in Chinese. I’ve consulted suggestions in a classical Chinese glossary (T2130 翻梵語), which reads the transliterations as Skt., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.\\
-<em>ghaṭī.</em> Ch. 揵茨. This was a water jar, apparently used for timekeeping because it became the name for clocks in India.\\
-<em>pātra</em>. Ch. 鉢. Skt. pātra, P. patta. This is the Chinese translation of the Buddhist alms bowl.\\
-<em>pipīla</em>. Ch. 匕匕羅. Skt. pipīla? This is the Skt. name of an ant. The Chinese glossary (T2130.1032c16) claims the transliteration means a flying insect. Alternatively, it may have been a word derived from an equivalent of P. pivati that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. pisīlava instead.\\
-<em>jvāla</em>. Ch. 遮留. Skt. Jvāla? The Chinese glossary (T2130.987a12) says that the transliteration means “light” (光). Jvāla seems closest to the transliteration; however, rucā is another possibility if the characters are transposed. Neither option seems appropriate for the name of a vessel, but I’ve no other clues as this point.\\
-<em>vistha</em>. Ch. 毘悉多, Skt. vista or vistha. The glossary (T2130.987a13) offers a more well-known transliteration (婆私吒) for vasiṣṭha and translates the term as “highest” (最勝). However, the passage in MN 139 has P. vitta, which means possessions or property in general, but P. vittha means a drinking bowl. I’ve adopted the Skt. equivalent.\\
-<em>vacana</em>. Ch. 婆闍那, Skt. vacana. The glossary (T2130.987a14) offers an alternative transliteration (婆遮那) and translates the term as “speech” (語). Here, again, I haven’t discovered another option that may have been a common name of a vessel.\\
-<em>śarāva</em>. Ch. 薩牢, MCh. “sa-lau”, Skt. śarāva. In MN 139, one of the items in the list is P. sarāva, meaning a “plate, cup, saucer” depending on the source. I’ve adopted the Skt. equivalent. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
