--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -78,7 +78,7 @@ next: SA1_149.html
 <li id="n2"><em>Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā</em>. C. 摩偷羅國、跋提河側、傘蓋菴羅樹園. SN 22.43 is placed at Sāvatthī. Aside from Mathurā, a well-known city in western India, these place names are obscure and lack good attestation in other Buddhist sources that I can find. Below is an analysis of each location name in this introduction:<br/>
 <em>Mathurā</em>. C. 摩偷羅國 (EMC. mua-t‘əu-la + “country” = Pr. <em>mathura</em> or <em>madhura</em>), P. <em>madhurā</em>, S. <em>mathurā</em>.<br/>
 <em>on the bank of the Bhadrika River</em>. C. 跋提河側 (EMC. buat-dei + “river bank”). 跋提 was sometimes used to translit. the name of one of the five original disciples, Bhadrika. It could also translit. <em>vati</em>. The river that would have been near Mathurā was the Yamunā. Perhaps this was another name for it, or a minor river in the area. I can find no attestation of this river in other sources.<br/>
-<em>Umbrella Mango Tree Park.</em> C. 傘蓋菴羅樹園 (EMC. “umbrella” + •əm-la (Pr. <em>amra</em>) + “tree” + “park”). There are a number of different grove names for Mathurā. In Theravada sources, it was called Gundāvana (alternatively spelled Kundā-, Guṇḍā-, and Kuṇḍā-). We also find the name 頻陀林 (EMC. biĕn-da + “forest”) in 大悲經 (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0380_p0971c17" target="_blank">T380.12.971c17</a>), which would appear to translit. <em>binda</em> or <em>vinda</em>. In the <em>Sarvāstivāda Vinaya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T23n1435_p0451a06" target="_blank">T1435.23451a6</a>), the forest was called 阿波大羅 (EMC. •a-pua-da-la), which is a translit. suggestive of words like S. <em>ānapatra</em>, which could mean umbrella. It would seem to be a detail added later, given the creative variations that we see across the board. [<a href="#ref2">back</a>]</li>
+<em>Umbrella Mango Tree Park.</em> C. 傘蓋菴羅樹園 (EMC. “umbrella” + •əm-la (Pr. <em>amra</em>) + “tree” + “park”). There are a number of different grove names for Mathurā. In Theravāda sources, it was called Gundāvana (alternatively spelled Kundā-, Guṇḍā-, and Kuṇḍā-). We also find the name 頻陀林 (EMC. biĕn-da + “forest”) in 大悲經 (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0380_p0971c17" target="_blank">T380.12.971c17</a>), which would appear to translit. <em>binda</em> or <em>vinda</em>. In the <em>Sarvāstivāda Vinaya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T23n1435_p0451a06" target="_blank">T1435.23451a6</a>), the forest was called 阿波大羅 (EMC. •a-pua-da-la), which is a translit. suggestive of words like S. <em>ānapatra</em>, which could mean umbrella. It would seem to be a detail added later, given the creative variations that we see across the board. [<a href="#ref2">back</a>]</li>
 </ol>
 <hr/>
 
