Added source text links

--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -39,7 +39,7 @@ next: SA1_153.html
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SĀ 1.151](SA1_151.html){:target="_blank"} and [SN 22.53](https://suttacentral.net/sn22.53){:target="_blank"} but simpler and with less emphasis on involvement. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 40 in the <cite>Taisho</cite> edition and no. 152 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009a27" target="_blank">T99.2.9a27-b6</a>). It’s similar to [SĀ 1.151](SA1_151.html){:target="_blank"} and [SN 22.53](https://suttacentral.net/sn22.53){:target="_blank"} but simpler and with less emphasis on involvement. [\[back\]](#ref1)
 2. {:#n2} The passages in brackets were abbreviated in the original Chinese. I’ve expanded the abbreviations with the corresponding passages from the previous sūtra, SĀ 1.151. [\[back\]](#ref2)
 
 ---
