--- a/01_agama/samyukta/01/SA1_159.md
+++ b/01_agama/samyukta/01/SA1_159.md
@@ -27,7 +27,7 @@ next: SA1_160.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.146](https://suttacentral.net/sn22.146){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 47 in the <cite>Taisho</cite> edition and no. 159 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a09" target="_blank">T99.2.12a9-17</a>). It’s parallel with [SN 22.146](https://suttacentral.net/sn22.146){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
