--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -27,7 +27,7 @@ next: SA1_161.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.146](https://suttacentral.net/sn22.146){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 48 in the <cite>Taisho</cite> edition and no. 160 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a18" target="_blank">T99.2.12a18-26</a>). It’s parallel with [SN 22.146](https://suttacentral.net/sn22.146){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
