--- a/01_agama/samyukta/01/SA1_161.md
+++ b/01_agama/samyukta/01/SA1_161.md
@@ -30,7 +30,7 @@ next: SA1_163.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.37](https://suttacentral.net/sn22.37){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 49 in the <cite>Taisho</cite> edition and no. 161 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a27" target="_blank">T99.2.12a27-b9</a>). It’s parallel with [SN 22.37](https://suttacentral.net/sn22.37){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
