--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -152,7 +152,7 @@ He replied, “So it is, Venerable Śāriputra.”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.85](https://suttacentral.net/sn22.85){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 104 in the <cite>Taisho</cite> edition and no. 172 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0030c12" target="_blank">T99.2.30c12-31c14</a>). It’s parallel with [SN 22.85](https://suttacentral.net/sn22.85){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} <em>appropriate statement</em>. Ch. 時說. Lit. “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ,” where P. <em>kalla</em> means “fitting;” but if the Indic term were S. <em>kāla</em>, the Chinese translator could have understood it as “timely.” [\[back\]](#ref2)
 
 ---
