--- a/01_agama/samyukta/02/SA2_126.md
+++ b/01_agama/samyukta/02/SA2_126.md
@@ -27,7 +27,7 @@ next: SA2_127.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel to [SN 35.82](https://suttacentral.net/sn35.82){:target="_blank"} and [84](https://suttacentral.net/sn35.84){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 231 in the <cite>Taisho</cite> edition and no. 304 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b11" target="_blank">T99.2.56b11-20</a>). It’s parallel to [SN 35.82](https://suttacentral.net/sn35.82){:target="_blank"} and [84](https://suttacentral.net/sn35.84){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
