--- a/01_agama/samyukta/02/SA2_127.md
+++ b/01_agama/samyukta/02/SA2_127.md
@@ -27,7 +27,7 @@ next: SA2_128.html
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SN 35.85](https://suttacentral.net/sn35.85){:target="_blank"}, but both the interlocutor and the definition of “empty” is different here. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 232 in the <cite>Taisho</cite> edition and no. 305 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b21" target="_blank">T99.2.56b21-c1</a>). It’s similar to [SN 35.85](https://suttacentral.net/sn35.85){:target="_blank"}, but both the interlocutor and the definition of “empty” is different here. [\[back\]](#ref1)
 
 ---
 
