--- a/01_agama/samyukta/02/SA2_128.md
+++ b/01_agama/samyukta/02/SA2_128.md
@@ -36,7 +36,7 @@ next: SA2_129.html
 
 ### Notes
 
-1. {:#n1} This sūtra is reminiscent of [SN 12.44](https://suttacentral.net/sn12.44){:target="_blank"}; however, it only shares the basic topic and not the content of the Pali sutta. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 233 in the <cite>Taisho</cite> edition and no. 306 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c02" target="_blank">T99.2.56c2-11</a>). It’s reminiscent of [SN 12.44](https://suttacentral.net/sn12.44){:target="_blank"}; however, it only shares the basic topic and not the content of the Pali sutta. [\[back\]](#ref1)
 
 ---
 
