--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -60,7 +60,7 @@ Which is called ‘crossing to the other side.’
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 35.116](https://suttacentral.net/sn35.116){:target="_blank"}. Ānanda’s explanation of the Buddha’s teaching differs, but the subject and narrative is the same as the Theravāda version. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>). It’s parallel with [SN 35.116](https://suttacentral.net/sn35.116){:target="_blank"}. Ānanda’s explanation of the Buddha’s teaching differs, but the subject and narrative is the same as the Theravāda version. [\[back\]](#ref1)
 
 ---
 
