--- a/01_agama/samyukta/02/SA2_130.md
+++ b/01_agama/samyukta/02/SA2_130.md
@@ -33,7 +33,7 @@ next: SA2_221.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 35.151](https://suttacentral.net/sn35.151){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 235 in the <cite>Taisho</cite> edition and no. 308 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0057a16" target="_blank">T99.2.57a16-b2</a>). It’s parallel with [SN 35.151](https://suttacentral.net/sn35.151){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
