--- a/01_agama/samyukta/02/SA2_221.md
+++ b/01_agama/samyukta/02/SA2_221.md
@@ -216,10 +216,10 @@ They answered, “No, Venerable Nanda.”
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em>’s parallels are found in the <cite>Mūlasarvāstivāda Vinaya</cite> (T1442.23.792a17-794a17) and at <a href="https://suttacentral.net/mn146/sujato" target="_blank">MN 146</a>.<br/>
+1. {:#n1} This is <em>sūtra</em> no. 276 in the <cite>Taisho</cite> edition and no. 399 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0073c09" target="_blank">T99.2.73c9-5c17</a>). It’s parallels are found in the <cite>Mūlasarvāstivāda Vinaya</cite> (T1442.23.792a17-794a17) and at <a href="https://suttacentral.net/mn146/sujato" target="_blank">MN 146</a>.<br/>
 The <cite>Mūlasarvāstivāda Vinaya</cite> version is clearly the same <em>sūtra</em> as we find here in SĀ and provides a peice of evidence that SĀ is from the same canon. However, it also provides evidence of how Buddhist texts, even Āgama <em>sūtra</em>s, grew in size gradually through the addition of details and more verbose descriptions. The present text was translated ca. 440 CE, while the <cite>Mūlasarvāstivāda Bhikṣu Vinaya</cite> was translated ca. 700 CE. The latter was also translated from a Sanskritized original as evidenced by its transliterations, while SĀ was still in Prakrit.<br/>
-When we compare this SĀ version to MN 146, we find that the Pali version is less verbose in terms of the background story but more so in terms of what Nandaka teaches the nuns. It, for instance, doesn’t include the backstory of the Buddha telling the monks to teach the nuns before the issue of Nanda refusing to take his turn arose. But when Nandaka teaches the selfless nature of the sense fields, he walks the nuns through a lengthier rationale that begins with their impermanence.<br/>
-On the other hand, MN 146 only treats the inner and outer sense fields and six groups of awareness before moving on to the parables of the oil lamp, tree shadow, and butcher. The overall outline of MN 146 is more concise than SĀ 2.221, but it has been made more verbose and Nanda’s second teaching is not abbreviated away. The result is that it is a longer <em>sutta</em> than SĀ 2.221 in terms of total word count, but SĀ 2.221 has been expanded to cover additional topics more concisely.<br/>
+When we compare this SĀ version to MN 146, we find that the Pali version is less verbose in terms of the background story but more so in terms of what Nandaka teaches the nuns. It, for instance, doesn’t include the backstory of the Buddha telling the monks to teach the nuns before the issue of Nandaka refusing to take his turn arose. But when Nandaka teaches the selfless nature of the sense fields, he walks the nuns through a lengthier rationale that begins with their impermanence.<br/>
+On the other hand, MN 146 only treats the inner and outer sense fields and six groups of awareness before moving on to the parables of the oil lamp, tree shadow, and butcher. The overall outline of MN 146 is more concise than SĀ 2.221, but it has been made more verbose and Nandaka’s second teaching is not abbreviated away. The result is that it is a longer <em>sutta</em> than SĀ 2.221 in terms of total word count, but SĀ 2.221 has been expanded to cover additional topics more concisely.<br/>
 Despite these differences, the content of these three versions are remarkably equiv., and we can clearly see that there was an original that hasn’t been changed drastically by any one of them. [\[back\]](#ref1)
 2. {:#n2} This list of names is reminescent of the disciple lists that became common in the introductions of later Buddhist scriptures, especially among Mahāyānists. It is not found in MN 146, but T1442 has a slightly larger list of nuns. Notes on each name can be found below:<br/>
 <em>Cundā</em>. C. 純陀 (EMC. tʃɪuĕn-da). This is a well-known translit. of P/S. <em>cunda</em>. Presumably, it was in a feminine form: Cundā. The parallel in T1442 is an alt. form of the same translit. (准陀, EMC. tʃɪuĕn-da).<br/>
