--- a/01_agama/samyukta/03/SA3_2.md
+++ b/01_agama/samyukta/03/SA3_2.md
@@ -47,7 +47,7 @@ They answered, “Yes, Bhagavān!”
 
 ### Notes
 
-1. {:#n1} This sūtra combines elements found in [SN 12.55](https://suttacentral.net/sn12.55){:target="_blank"}, [57](https://suttacentral.net/sn12.57){:target="_blank"}, and [58](https://suttacentral.net/sn12.58){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 284 in the <cite>Taisho</cite> edition and no. 465 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0079b23" target="_blank">T99.2.79b23-c26</a>). It combines elements found in [SN 12.55](https://suttacentral.net/sn12.55){:target="_blank"}, [57](https://suttacentral.net/sn12.57){:target="_blank"}, and [58](https://suttacentral.net/sn12.58){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
 
 ---
 
