--- a/01_agama/samyukta/04/SA4_1.md
+++ b/01_agama/samyukta/04/SA4_1.md
@@ -76,7 +76,7 @@ Kauṇḍinya said to the Buddha, “I’ve known it, Sugata!”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 56.11](https://suttacentral.net/sn56.11){:target="_blank"}, [T109](../alternates/T109.html), and [T110](../alternates/T110.html). [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 379 in the <cite>Taisho</cite> edition and no. 542 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0103c13" target="_blank">T99.2.103c13-4a29</a>). It’s parallel with [SN 56.11](https://suttacentral.net/sn56.11){:target="_blank"}, [T109](../alternates/T109.html), and [T110](../alternates/T110.html). [\[back\]](#ref1)
 
 ---
 
