--- a/01_agama/samyukta/04/SA4_55.md
+++ b/01_agama/samyukta/04/SA4_55.md
@@ -35,7 +35,7 @@ The monks said to the Buddha, “Bhagavān, the leaves in your hand are few, but
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 56.31](https://suttacentral.net/sn56.31){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 404 in the <cite>Taisho</cite> edition and no. 596 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0108a24" target="_blank">T99.2.108a24-b12</a>). It’s parallel with [SN 56.31](https://suttacentral.net/sn56.31){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
