--- a/01_agama/samyukta/01/SA1_151.md
+++ b/01_agama/samyukta/01/SA1_151.md
@@ -42,9 +42,9 @@ next: SA1_152.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.54](https://suttacentral.net/sn22.54){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} <em>four acquired substrates</em>. Ch. 四取攀緣. 攀緣 is parallel with P. ārammaṇa and Skt. ārambaṇa, which means a support or basis for something. The Chinese, however, suggests a verbal meaning “climbing conditions” or “climbing on something,” evoking the image of vines climbing walls and fences. I take the intended meaning to be like the English “substrate” as something in which things grow. The metaphor of water and earth as the substrates for plant growth seems to impart this meaning. [\[back\]](#ref2)
-3. {:#n3} <em>something unsupported</em>. Ch. 非境界, Skt. anārambaṇa. Literally, the word means “not a support,” used to mean something that’s not an actual thing outside of the human imagination. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 39 in the <cite>Taisho</cite> edition and no. 151 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c26" target="_blank">T99.2.8c26-9a26</a>). It’s parallel with [SN 22.54](https://suttacentral.net/sn22.54){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} <em>four acquired substrates</em>. Ch. 四取攀緣. 攀緣 is parallel with P. <em>ārammaṇa</em> and S. <em>ārambaṇa</em>, which means a support or basis for something. The Chinese, however, suggests a verbal meaning “climbing conditions” or “climbing on something,” evoking the image of vines climbing walls and fences. I take the intended meaning to be like the English “substrate” as something in which things grow. The metaphor of water and earth as the substrates for plant growth seems to impart this meaning. [\[back\]](#ref2)
+3. {:#n3} <em>something unsupported</em>. Ch. 非境界, S. <em>anārambaṇa</em>. Literally, the word means “not a support,” used to mean something that’s not an actual thing outside of the human imagination. [\[back\]](#ref1)
 
 ---
 
