--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -115,7 +115,7 @@ next: SA1_158.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.56](https://suttacentral.net/sn22.56){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 41 in the <cite>Taisho</cite> edition and no. 153 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009b07" target="_blank">T99.2.9b7-10a3</a>). It’s parallel with [SN 22.56](https://suttacentral.net/sn22.56){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
