--- a/01_agama/samyukta/01/SA1_158.md
+++ b/01_agama/samyukta/01/SA1_158.md
@@ -60,7 +60,7 @@ next: SA1_159.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.79](https://suttacentral.net/sn22.79){:target="_blank"}. Note that there are some significant departures between the two versions. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 46 in the <cite>Taisho</cite> edition and no. 158 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b21" target="_blank">T99.2.11b21-12a8</a>). It’s parallel with [SN 22.79](https://suttacentral.net/sn22.79){:target="_blank"}. Note that there are some significant departures between the two versions. [\[back\]](#ref1)
 2. {:#n2} <em>distinguishing</em>. The Chinese here could be a literal translation of <em>vi-</em> (別) <em>-jñā-</em> (知). [\[back\]](#ref2)
 
 ---
