--- a/01_agama/samyukta/01/SA1_163.md
+++ b/01_agama/samyukta/01/SA1_163.md
@@ -27,7 +27,7 @@ next: SA1_172.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.32](https://suttacentral.net/sn22.32){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 51 in the <cite>Taisho</cite> edition and no. 163 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012b25" target="_blank">T99.2.12b25-c1</a>). It’s parallel with [SN 22.32](https://suttacentral.net/sn22.32){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2}<em>destroyed</em>. C. 壞. The Pali parallel has <em>pabhaṅga</em>, which Pali commentators interpreted as “fragile” or “brittle,” but which can mean “destroyed.” 壞 often means simply “to be destroyed,” but it has the connotation of gradual destruction, so it often means something more like “eroded” or “ruined.” In both cases, there’s a sense of destruction over time (i.e., impermanence).
 3. {:#n3}<em>extinguishment</em>. C. 涅槃. I believe here the Chinese is transliterating a verb related to nirvāṇa that’s here a participle meaning “extinguished.” The Pali parallel lacks this, giving two other synonyms for cessation: <em>nirodho vūpasamo atthaṅgamo</em>. [\[back\]](#ref3)
 
