--- a/01_agama/samyukta/02/SA2_123-125.md
+++ b/01_agama/samyukta/02/SA2_123-125.md
@@ -30,7 +30,7 @@ next: SA2_124.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel to [SN 35.68](https://suttacentral.net/sn35.68){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 230 in the <cite>Taisho</cite> edition and no. 301-303 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056a24" target="_blank">T99.2.56a24-b10</a>). It’s parallel to [SN 35.68](https://suttacentral.net/sn35.68){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} The full passage would presumably include the remaining chain of dependent origination, i.e. feeling, craving, clinging, existence, birth, old age, illness, death, grief, sorrow, pain, and trouble have been omitted. [\[back\]](#ref1)
 
 ---
