--- a/01_agama/samyukta/03/SA3_1.md
+++ b/01_agama/samyukta/03/SA3_1.md
@@ -47,7 +47,7 @@ They answered, “Yes, Bhagavān!”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 12.57](https://suttacentral.net/sn12.57){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
+1. {:#n1} This is <em>sūtra</em> no. 283 in the <cite>Taisho</cite> edition and no. 464 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0079a25" target="_blank">T99.2.79a25-b22</a>). It’s parallel with [SN 12.57](https://suttacentral.net/sn12.57){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
 
 ---
 
