--- a/01_agama/samyukta/01/SA1_49.md
+++ b/01_agama/samyukta/01/SA1_49.md
@@ -26,7 +26,7 @@ next: SA1_50.html
     <td id='p3'>3. “Monks, there are times when it doesn’t rain for a long night,<sup id="ref2"><a href="#n2">2</a></sup> and all the water of the oceans dry up. Monks, while they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.</td>
   </tr>
   <tr>
-    <td title='t125.2.69b5'>諸比丘！有時長夜須彌山王皆悉崩落。無明所蓋，愛結所繫，眾生長夜生死輪迴，愛結不斷，不盡苦邊。諸比丘！有時長夜此大地悉皆敗壞，而眾生無明所蓋，愛結所繫，眾生長夜生死輪迴，愛結不斷，不盡苦邊。</td>
+    <td title='t125.2.69b5'>諸比丘！有時長夜須彌山王皆悉崩落。無明所蓋，愛結所繫，眾生長夜生死輪迴。愛結不斷，不盡苦邊。</td>
     <td id='p4'>4. “Monks, there’s a time when Sumeru the King of Mountains is completely broken up for a long night. While they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.</td>
   </tr>
   <tr>
