--- a/01_agama/samyukta/02/SA2_126.md
+++ b/01_agama/samyukta/02/SA2_126.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 2. The Sense Fields | 126 (231). Samṛddhi (4)'
 type: kramdown
 base: ../../../
-previous: SA2_125.html
+previous: SA2_123-125.html
 next: SA2_127.html
 ---
 
