--- a/01_agama/samyukta/01/SA1_55.md
+++ b/01_agama/samyukta/01/SA1_55.md
@@ -51,7 +51,7 @@ next: SA1_56.html
   </tr>
   <tr>
     <td title='t125.2.72a18'>「又復譬如焚尸火𣕊捐棄塜間，不為樵伐之所採拾。 我說此譬，愚癡凡夫比丘而起貪欲，極生染著，瞋恚兇暴，懈怠下劣，失念不定，諸根散亂，亦復如是。</td>
-    <td id='p9'>9. “He is also like a burned stick from a funeral pyre discarded on a charnel ground that can’t be included in kindling wood. I say this ordinary, foolish monk is like this example who becomes greedy, extremely affected by attachments, angry and violent, slothful and mean, who loses their mindfulness and aren’t settled, and whose faculties are confused.”</td>
+    <td id='p9'>9. “He is also like a burned stick from a funeral pyre discarded on a charnel ground that can’t be included in kindling wood. I say this ordinary, foolish monk is like this example who becomes greedy, extremely affected by attachments, angry and violent, slothful and mean, who loses their mindfulness and aren’t settled, and whose faculties are confused.</td>
   </tr>
   <tr>
     <td title='t125.2.72a21'>「比丘，有三不善覺法。 何等為三？ 貪覺、恚覺、害覺。 此三覺由想而起。 云何想？ 想有無量種種貪想、恚想、害想。 諸不善覺從此而生。</td>
