--- a/01_agama/samyukta/03/SA3_1.md
+++ b/01_agama/samyukta/03/SA3_1.md
@@ -7,53 +7,64 @@ previous: index.html
 next: SA3_2.html
 ---
 
-# [The Related Discourses](../index.html)
-## [3. Causation](index.html)
-### 1 (283). Planting a Tree
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>3. Causation</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二八三） 種樹</th>
+  <th class='en'>1 (283). Planting a Tree</th>
+  <tr>
+    <td title='t125.2.79a25'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79a26'>爾時，世尊告諸比丘： 「若於結所繫法隨生味著、顧念、心縛，則愛生。 愛緣取。 取緣有。 有緣生。 生緣老、病、死、憂、悲、惱、苦。 如是如是純大苦聚集。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If those things that are tying bonds are savored, thought about, and fetter the mind, then craving arises. Craving conditions grasping. Grasping conditions existence. Existence conditions birth. Birth conditions old age, illness, death, sorrow, lamentation, trouble, and pain. Such is the way that the whole mass of suffering forms.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79a26'>「如人種樹。 初，小、軟、弱。 愛、護令安。 壅以糞土，隨時溉灌，冷暖調適 。以是因緣，然後，彼樹得增長大。</td>
+    <td id='p3'>3. “It’s like someone who plants a tree. At first, it’s small, flexible, and weak. When cared for and protected, it’s made secure. They cultivate it with fertile soil, water it at appropriate times, and make it suitable for cold and warm weather. As a result of these conditions, the tree grows larger afterward.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b2'>「如是，比丘，結所繫法味著將養，則生恩愛。 愛緣取。 取緣有。 有緣生。 生緣老、病、死、憂、悲、惱、苦。 如是如是純大苦聚集。</td>
+    <td id='p4'>4. “In this way, monks, when things that are tying bonds are savored and nourished, this then gives rise to craving. Craving conditions grasping. Grasping conditions existence. Existence conditions birth. Birth conditions old age, illness, death, sorrow, lamentation, trouble, and pain. Such is the way that the whole mass of suffering forms.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b5'>「若於結所繫法隨順無常觀，住、生、滅觀，無欲觀，滅觀，捨觀，不生顧念。 心不縛著，則愛滅。 愛滅則取滅。 取滅則有滅。 有滅則生滅。 生滅則老、病、死、憂、悲、惱、苦滅。 如是如是純大苦聚滅。</td>
+    <td id='p5'>5. “When things that are tying bonds are followed by contemplation of impermanence, contemplation of duration, arising, and cessation, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment, then one won’t think about them. Their mind won’t be bound up by them, and then craving ceases. When craving ceases, grasping ceases. When grasping ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, trouble, and pain cease. Such is the way that the whole mass of suffering ceases.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b9'>「猶如種樹。 初，小、軟、弱。 不愛、護，不令安隱。 不壅糞土，不隨時溉灌，冷暖不適。 不得增長。</td>
+    <td id='p6'>6. “It’s like someone who plants a tree. At first, it’s small, flexible, and weak. When it isn’t cared for and protected, it doesn’t become secure. They don’t cultivate it with fertile soil, water it at appropriate times, or make it suitable for cold or warm weather. [As a result of these conditions,] the tree doesn’t grow larger.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b11'>「若復斷根、截枝，段段斬截，分分解析。 風飄日炙，以火焚燒。 燒以成糞，或颺以疾風，或投之流水。 比丘，於意云何？ 非為彼樹斷截其根⋯乃至⋯焚燒，令其磨滅？ 於未來世成不生法耶？」</td>
+    <td id='p7'>7. “Suppose, again, they cut it at the root, chop off its branches, cut it into sections, and the pieces are broken down further. It dries out in the wind, and the sun bakes it. They burn it to ash and use it as fertilizer, it’s blown away by the wind, or it’s carried away by a stream. Monks, what do you think? Wouldn’t that tree be destroyed when they cut it at the root … burn it to ash? It wouldn’t be something that arises again in the future, would it?”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b16'>答言： 「如是，世尊。」</td>
+    <td>They answered, “It wouldn’t, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b16'>「如是，比丘，於結所繫法隨順無常觀，住、生、滅觀，無欲觀，滅觀，捨觀，不生顧念。 心不縛著，則愛滅。 愛滅則取滅。 取滅則有滅。 有滅則生滅。 生滅則老、病、死、憂、悲、惱、苦滅。 如是如是純大苦聚滅。」</td>
+    <td id='p8'>8. “So it is, monks, when things that are tying bonds are followed by contemplation of impermanence, contemplation of duration, arising, and cessation, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment, then one won’t think about them. Their mind won’t be bound up by them, and then craving ceases. When craving ceases, grasping ceases. When grasping ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, trouble, and pain cease. Such is the way that the whole mass of suffering ceases.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b21'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p9'>9. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When being bound by the bonds is savored, thought about, and fetters the mind, then craving arises. Craving then is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
-{: #p2}
+<hr/>
 
-3\. “It’s like someone planting a tree. At first, it’s small, flexible, and weak. When cared for and protected, it’s made secure. They cultivate it with manure and soil, water it at appropriate times, and prepare it for cold and warm weather. Afterward, the tree is able grow larger under those conditions.
-{: #p3}
+<h3 id="notes">Notes</h3>
 
-4\. “So it is, monks. When being bound by the bonds is savored and nourished, it creates affection and craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
-{: #p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 283 in the <cite>Taisho</cite> edition and no. 464 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0079a25" target="_blank">T99.2.79a25-b22</a>). It’s parallel with <a href="https://suttacentral.net/sn12.57" target="_blank">SN 12.57</a>. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about [the bonds], their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
-{: #p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 May 2024</p>
 
-6\. “It’s like someone planting a tree. At first, it’s small, flexible, and weak. If they don’t care for and protect it, it’s not made secure. They don’t cultivate it with manure and soil, don’t water it at appropriate times, and don’t prepare it for cold and warm weather. It can’t grow larger [under those conditions].
-{: #p6}
-
-7\. “Suppose, again, they cut its roots, chop off its branches, cut it into sections, and the pieces are broken down further. The wind dries it out, and the sun bakes it. It’s burned to ash and used as fertilizer, blown away by a swift wind, or carried away by a stream of water.
-{: #p7}
-
-8\. “Monks, what do you think? Wouldn’t that tree be destroyed when its roots are cut … burned to ash? Would it be something that won’t arise in the future?”
-{: #p8}
-
-They answered, “Yes, Bhagavān!”
-
-9\. “So it is, monks. Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about [the bonds], their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.”
-{: #p9}
-
-10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{: #p10}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 283 in the <cite>Taisho</cite> edition and no. 464 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0079a25" target="_blank">T99.2.79a25-b22</a>). It’s parallel with [SN 12.57](https://suttacentral.net/sn12.57){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 22 October 2022
-{: .revised}
-
----
+<hr/>
