--- a/01_agama/samyukta/03/SA3_2.md
+++ b/01_agama/samyukta/03/SA3_2.md
@@ -4,56 +4,67 @@ title: 'The Related Discourses | 3. Causation | 2 (284). A Great Tree'
 type: kramdown
 base: ../../../
 previous: SA3_1.html
-next: ../04/index.html
+next: SA3_3.html
 ---
 
-# [The Related Discourses](../index.html)
-## [3. Causation](index.html)
-### 2 (284). A Great Tree
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>3. Causation</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二八四） 大樹</th>
+  <th class='en'>2 (284). A Great Tree</th>
+  <tr>
+    <td title='t125.2.79b23'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b24'>爾時，世尊告諸比丘： 「若於所取法隨生味著、顧念、縛心，其心驅馳，追逐名色。 名色緣六入處。 六入處緣觸。 觸緣受。 受緣愛。 愛緣取。 取緣有。 有緣生。 生緣老、病、死、憂、悲、惱、苦。 如是如是純大苦聚集。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If things that are grasped are savored, thought about, and fetter the mind, then one’s mind runs around chasing after name and form. Name and form conditions the six senses. The six senses condition contact. Contact conditions feeling. Feeling conditions craving. Craving conditions grasping. Grasping conditions existence. Existence conditions birth. Birth conditions old age, illness, death, sorrow, lamentation, trouble, and pain. Such is the way the whole mass of suffering forms.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79b28'>「譬大樹根、幹、枝條、柯、葉、華、果。 下根深固。 壅以糞土，溉灌以水，彼樹堅固，永世不朽。</td>
+    <td id='p3'>3. “It’s like the roots, trunk, limbs, branches, leaves, flowers, and fruit of a great tree. Its roots are deep and secure. Cultivated with fertile soil and irrigated with water, that tree will always be secure in the world and not decay.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c1'>「如是，比丘，於所取法隨生味著、顧念、心縛，其心驅馳，追逐名色。 名色緣六入處。 六入處緣觸。 觸緣受。 受緣愛。 愛緣取。 取緣有。 有緣生。 生緣老、病、死、憂、悲、惱、苦。 如是如是純大苦聚集。</td>
+    <td id='p4'>4. “So it is, monks, when things that are grasped are savored, thought about, and fetter the mind, then one’s mind runs around chasing after name and form. Name and form conditions the six senses. The six senses condition contact. Contact conditions feeling. Feeling conditions craving. Craving conditions grasping. Grasping conditions existence. Existence conditions birth. Birth conditions old age, illness, death, sorrow, lamentation, trouble, and pain. Such is the way the whole mass of suffering forms.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c6'>「若於所取法隨順無常觀，住生滅觀、無欲觀、滅觀、厭觀，心不顧念，無所縛著。 識則不驅馳、追逐名色，則名色滅。 名色滅則六入處滅。 六入處滅則觸滅。 觸滅則受滅。 受滅則愛滅。 愛滅則取滅。 取滅則有滅。 有滅則生滅。 生滅則老、病、死、憂、悲、惱、苦滅。 如是如是則純大苦聚滅。</td>
+    <td id='p5'>5. “If those things that are grasped are followed by contemplation of impermanence, contemplation of duration, arising, and cessation, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment, one won’t think about them, and one’s mind won’t be fettered by anything. One’s awareness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six senses cease. When the six senses cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, grasping ceases. When grasping ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, trouble, and pain cease. Thus ceases the whole mass of suffering.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c12'>「猶如種樹。 不隨時愛護令其安隱，不壅糞土，不隨時溉灌，冷暖不適，不得增長。</td>
+    <td id='p6'>6. “It’s like someone who plants a tree. [At first, it’s small, flexible, and weak.] If it’s not cared for and protected at the appropriate times to make it secure, not cultivated with fertile soil, not watered at the appropriate times, andor make it suitable for cold and warm weather, it won’t grow larger.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c14'>「若復斷根、截枝，段段斬截，分分解析，風飄日炙，以火焚燒，燒以成糞，或颺以疾風，或投之流水。比丘！於意云何？非為彼樹斷截其根，乃至焚燒，令其磨滅，於未來世成不生法耶？」</td>
+    <td id='p7'>7. “Suppose, again, they cut it at the root, chop off its branches, cut it into sections, and the pieces are broken down further. It dries out in the wind, and the sun bakes it. They burn it to ash and use it as fertilizer, it’s blown away by the wind, or it’s carried away by a stream. Monks, what do you think? Wouldn’t that tree be destroyed when they cut it at the root … burn it to ash? It wouldn’t be something that arises again in the future, would it?”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c18'>答言： 「如是，世尊。」</td>
+    <td>They answered, “Yes, Bhagavān!”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c19'>「如是，比丘，於所取法隨順無常觀，住、生、滅觀，無欲觀，滅觀，捨觀，不生顧念，心不縛著。 識不驅馳、追逐名色，則名色滅。 名色滅則六入處滅。 六入處滅則觸滅。 觸滅則受滅。 受滅則愛滅。 愛滅則取滅。 取滅則有滅。 有滅則生滅。 生滅則老、病、死、憂、悲、惱、苦滅。 如是純大苦聚滅。」</td>
+    <td id='p8'>8. “So it is, monks, when things that are grasped are followed by contemplation of impermanence, contemplation of duration, arising, and cessation, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment, one won’t think about them, and one’s mind won’t be fettered by anything. One’s awareness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six senses cease. When the six senses cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, grasping ceases. When grasping ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, trouble, and pain cease. Thus ceases the whole mass of suffering.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.79c25'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p9'>9. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
-{: #p2}
+<hr/>
 
-3\. “It’s like the roots, trunk, limbs, branches, leaves, flowers, and fruit of a great tree. The roots under it go deep and make it secure. Cultivated with manure and soil and soaked with water, that tree will always be secure in the world and not decay.
-{: #p3}
+<h3 id="notes">Notes</h3>
 
-4\. “So it is, monks. When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
-{: #p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 284 in the <cite>Taisho</cite> edition and no. 465 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0079b23" target="_blank">T99.2.79b23-c26</a>). It combines elements found in <a href="https://suttacentral.net/sn12.55" target="_blank">SN 12.55</a>, <a href="https://suttacentral.net/sn12.57" target="_blank">57</a>, and <a href="https://suttacentral.net/sn12.58" target="_blank">58</a>. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about [clinging to things], and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
-{: #p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 May 2024</p>
 
-6\. “It’s like someone planting a tree. [At first, it’s small, flexible, and weak.] If it’s not cared for and protected in time, it’s not made secure. They don’t cultivate it with manure and soil, don’t water it at appropriate times, and don’t prepare it for cold and warm weather. It can’t grow larger [under those conditions].
-{: #p6}
-
-7\. “Suppose, again, they cut its roots, chop off its branches, cut it into sections, and the pieces are broken down further. The wind dries it out, and the sun bakes it. It’s burned to ash and used as fertilizer, blown away by a swift wind, or carried away by a stream of water.
-{: #p7}
-
-8\. “Monks, what do you think? Wouldn’t that tree be destroyed when its roots are cut … burned to ash? Would it be something that won’t arise in the future?”
-{: #p8}
-
-They answered, “Yes, Bhagavān!”
-
-9\. “So it is, monks. Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.”
-{: #p9}
-
-10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{: #p10}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 284 in the <cite>Taisho</cite> edition and no. 465 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0079b23" target="_blank">T99.2.79b23-c26</a>). It combines elements found in [SN 12.55](https://suttacentral.net/sn12.55){:target="_blank"}, [57](https://suttacentral.net/sn12.57){:target="_blank"}, and [58](https://suttacentral.net/sn12.58){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
