--- a/01_agama/samyukta/01/SA1_146.md
+++ b/01_agama/samyukta/01/SA1_146.md
@@ -15,7 +15,7 @@ next: SA1_147.html
   <th class='en'>146 (34). Five Monks</th>
   <tr>
     <td title='t99.2.7c13'>如是我聞： 一時，佛住波羅㮈國、仙人住處、鹿野苑中。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Residence of Sages in the Deer Preserve of Bārāṇasī.</td>
   </tr>
   <tr>
     <td title='t99.2.7c14'>爾時，世尊告餘五比丘： 「色非有我。 若色有我者，於色不應病、苦生，亦不得於色欲：『令如是、不令如是』。 以色無我故，於色有病、有苦生，亦得於色欲：『令如是、不令如是』。 受、想、行、識亦復如是。</td>
