--- a/01_agama/samyukta/02/SA2_5.md
+++ b/01_agama/samyukta/02/SA2_5.md
@@ -7,7 +7,7 @@ previous: SA2_1-4.html
 next: SA2_6.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>2. The Sense Fields</a></h2>
 
 <table class="trans">
