--- a/01_agama/samyukta/04/SA4_4.md
+++ b/01_agama/samyukta/04/SA4_4.md
@@ -7,7 +7,7 @@ previous: SA4_3.html
 next: SA4_5.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>4. Truth</a></h2>
 
 <table class="trans">
