--- a/01_agama/samyukta/01/SA1_23.md
+++ b/01_agama/samyukta/01/SA1_23.md
@@ -7,7 +7,7 @@ previous: SA1_22.html
 next: SA1_24.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>1. The Aggregates</a></h2>
 
 <table class="trans">
