--- a/01_agama/samyukta/02/SA2_40.md
+++ b/01_agama/samyukta/02/SA2_40.md
@@ -7,7 +7,7 @@ previous: SA2_15-39.html
 next: SA2_41-48.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>2. The Sense Fields</a></h2>
 
 <table class="trans">
