--- a/01_agama/samyukta/03/SA3_5.md
+++ b/01_agama/samyukta/03/SA3_5.md
@@ -7,7 +7,7 @@ previous: SA3_4.html
 next: SA3_6.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>3. Causation</a></h2>
 
 <table class="trans">
