--- a/01_agama/samyukta/04/SA4_9.md
+++ b/01_agama/samyukta/04/SA4_9.md
@@ -7,7 +7,7 @@ previous: SA4_8.html
 next: SA4_10.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>4. Causation</a></h2>
 
 <table class="trans">
