--- a/01_agama/samyukta/26/SA26_11.md
+++ b/01_agama/samyukta/26/SA26_11.md
@@ -7,7 +7,7 @@ previous: index.html
 next: ../34/index.html
 ---
 
-<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h1><a href='../index.html'>The Related Discourses</a></h1>
 <h2><a href='index.html'>26. Yakṣas</a></h2>
 
 <table class="trans">
